WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198348
Followup to
r245267
and
r245272
: fix even more deprecated uses of -[UIApplication interfaceOrientation]
https://bugs.webkit.org/show_bug.cgi?id=198348
Summary
Followup to r245267 and r245272: fix even more deprecated uses of -[UIApplica...
Keith Rollin
Reported
2019-05-29 13:20:11 PDT
r245267
and
r245272
fixed many instances of this issue; this change fixes the issue for watchOS.
Attachments
Patch
(1.31 KB, patch)
2019-05-29 13:21 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2019-05-29 14:49 PDT
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-05-29 13:20:24 PDT
<
rdar://problem/51234077
>
Keith Rollin
Comment 2
2019-05-29 13:21:29 PDT
Created
attachment 370879
[details]
Patch
Keith Rollin
Comment 3
2019-05-29 14:49:15 PDT
Created
attachment 370888
[details]
Patch
Wenson Hsieh
Comment 4
2019-05-29 14:51:13 PDT
Comment on
attachment 370888
[details]
Patch rs=me
WebKit Commit Bot
Comment 5
2019-05-29 16:02:00 PDT
Comment on
attachment 370888
[details]
Patch Clearing flags on attachment: 370888 Committed
r245874
: <
https://trac.webkit.org/changeset/245874
>
WebKit Commit Bot
Comment 6
2019-05-29 16:02:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug