Followup to r245267 and r245272: fix even more deprecated uses of -[UIApplication interfaceOrientation] https://bugs.webkit.org/show_bug.cgi?id=198348 <rdar://problem/51234077>

Reviewed by Wenson Hsieh.

r245267 and r245272 fixed many instances of this issue; this change
fixes the issue for watchOS.

* wtf/FeatureDefines.h:


Canonical link: https://commits.webkit.org/212382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245874 268f45cc-cd09-0410-ab3c-d52691b4dbfc